[gd_scene load_steps=8 format=3 uid="uid://bk5rchg4mt0js"]

[ext_resource type="Script" uid="uid://r7iw7h16gilr" path="res://addons/graph_dialogs/editor/modules/settings/scripts/translation_settings.gd" id="1_dnk3v"]
[ext_resource type="Texture2D" uid="uid://djj6crqjqkqpu" path="res://addons/graph_dialogs/icons/translation.svg" id="2_2wqnh"]
[ext_resource type="Texture2D" uid="uid://bvlhrp4lgb3vy" path="res://addons/graph_dialogs/icons/csv_table.svg" id="2_qeqd1"]
[ext_resource type="PackedScene" uid="uid://secb1eoygm27" path="res://addons/graph_dialogs/editor/modules/settings/locales_selector.tscn" id="2_qh116"]
[ext_resource type="Texture2D" uid="uid://c80u5yueu7wit" path="res://addons/graph_dialogs/icons/character.svg" id="3_rjao7"]
[ext_resource type="PackedScene" uid="uid://bceidtkw07484" path="res://addons/graph_dialogs/editor/components/folder_field.tscn" id="4_01lks"]
[ext_resource type="PackedScene" uid="uid://bxwvdcjc16ytf" path="res://addons/graph_dialogs/editor/components/file_field.tscn" id="4_erkog"]

[node name="TranslationSettings" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnk3v")

[node name="CSVFiles" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="CSVFiles"]
layout_mode = 2

[node name="UseTranslationToggle" type="CheckButton" parent="CSVFiles/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Enable/disable translations for dialogues."
text = "Use translation"
icon = ExtResource("2_2wqnh")

[node name="--" type="HSeparator" parent="CSVFiles/Container"]
layout_mode = 2

[node name="UseCSVFilesToggle" type="CheckButton" parent="CSVFiles/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Enable the use of CSV files for translations. Otherwise, translations will be saved in the dialog file or in the character file for character names."
text = "Use CSV files for translation"
icon = ExtResource("2_qeqd1")

[node name="CSVFolder" type="HBoxContainer" parent="CSVFiles/Container"]
layout_mode = 2
tooltip_text = "Directory path of the CSV translation files."

[node name="Label" type="Label" parent="CSVFiles/Container/CSVFolder"]
layout_mode = 2
text = "CSV Files Folder"

[node name="CSVFolderField" parent="CSVFiles/Container/CSVFolder" instance=ExtResource("4_01lks")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="---" type="HSeparator" parent="CSVFiles/Container"]
layout_mode = 2

[node name="TranslateNamesToggle" type="CheckButton" parent="CSVFiles/Container"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Enable translation for the character names."
text = "Translate character names"
icon = ExtResource("3_rjao7")

[node name="CharCSVFile" type="HBoxContainer" parent="CSVFiles/Container"]
layout_mode = 2
tooltip_text = "Path to the CSV file with the translations of the character names."

[node name="Label" type="Label" parent="CSVFiles/Container/CharCSVFile"]
layout_mode = 2
text = "Character Names CSV"

[node name="CharNamesCSVField" parent="CSVFiles/Container/CharCSVFile" instance=ExtResource("4_erkog")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
_placeholder_text = "Select a CSV file..."
file_filters = PackedStringArray("*.csv")

[node name="----" type="HSeparator" parent="CSVFiles/Container"]
layout_mode = 2

[node name="CollectTranslations" type="Button" parent="CSVFiles/Container"]
layout_mode = 2
size_flags_horizontal = 0
text = "Collect Translations"
icon = ExtResource("2_2wqnh")

[node name="LocalesSettings" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Container" type="VBoxContainer" parent="LocalesSettings"]
layout_mode = 2

[node name="Title" type="Label" parent="LocalesSettings/Container"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Localization Settings"

[node name="DefaultLocale" type="HBoxContainer" parent="LocalesSettings/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="LocalesSettings/Container/DefaultLocale"]
layout_mode = 2
text = "Default Locale"

[node name="OptionButton" type="OptionButton" parent="LocalesSettings/Container/DefaultLocale"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TestingLocale" type="HBoxContainer" parent="LocalesSettings/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="LocalesSettings/Container/TestingLocale"]
layout_mode = 2
text = "Testing Locale"

[node name="OptionButton" type="OptionButton" parent="LocalesSettings/Container/TestingLocale"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="LocalesSettings/Container"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LocalesSelector" parent="LocalesSettings/Container" instance=ExtResource("2_qh116")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="CSVFiles/Container/CollectTranslations" to="." method="_on_collect_translations_pressed"]
[connection signal="item_selected" from="LocalesSettings/Container/DefaultLocale/OptionButton" to="." method="_on_default_locale_selected"]
[connection signal="item_selected" from="LocalesSettings/Container/TestingLocale/OptionButton" to="." method="_on_testing_locale_selected"]
